# ProjectSchedulingVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  RCPSP-viz.mov  README.md  driver.cpp  events-resource.json  events-simple.json  main.cpp  rcpsp_solver.cpp
frontend/: package-lock.json  package.json  test-extraction.js
frontend/public/: events-complex.json  events-simple.json  events-software.json  events.json  instances.json
frontend/src/: App.css  App.tsx  ConstraintViolationsPanel.tsx  CostDisplay.tsx  DependencyArrows.tsx  DraggableGantt.tsx  GameControls.tsx  GameMode.tsx  GanttChart.tsx  ReadOnlyGantt.tsx  ReadOnlyGanttWithResources.tsx  ResourceUsagePlot.tsx  ResourceUsagePlots.tsx  SearchTree.tsx  TimeSlider.tsx  ViewToggle.tsx  constraintValidator.ts  index.css  problemExtractor.ts  store.ts  types.ts
or-tools_patches/: manual_working_gurobi_fix.patch
